--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "downlevelIteration": true
   },
+  "extends": "./path.json",
   "include": [
-    "src"
+    "src",
+    "typings"
   ]
 }
