--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "demo-ts",
+  "name": "electron-react",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "dependencies": {
+    "@loadable/component": "5.12.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
     "antd": "^4.4.1",
+    "antd-dayjs-webpack-plugin": "1.0.0",
     "babel-plugin-import": "^1.13.0",
     "connected-react-router": "^6.8.0",
     "customize-cra": "^1.0.0",
+    "devtron": "1.4.0",
+    "electron": "10.1.5",
+    "electron-packager": "15.1.0",
     "flooks": "^3.0.0",
     "less": "^3.11.3",
     "less-loader": "5.0.0",
+    "lodash": "4.17.20",
+    "memoize-one": "5.1.1",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
@@ -26,10 +30,11 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "electron . --debug | react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "package": "electron-packager ./build application --win --out package/ --arch=x64 --app-version=1.1.0 --electron-version=10.1.5"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,6 +52,15 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.5"
-  }
+    "@types/jest": "^24.0.0",
+    "@types/loadable__component": "5.13.1",
+    "@types/lodash": "4.14.161",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "5.1.1",
+    "prettier": "2.1.2"
+  },
+  "homepage": "."
 }
