--- a/package.json
+++ b/package.json
@@ -62,5 +62,16 @@
     "@types/styled-components": "5.1.1",
     "prettier": "2.1.2"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "magic-lint --commit"
+    }
+  },
+  "lint-staged": {
+    "*.{jsx,js,ts,tsx,json,md,css,less}": [
+      "prettier --write"
+    ]
+  },
   "homepage": "."
 }
